--- a/dev/index.html
+++ b/dev/index.html
@@ -205,8 +205,9 @@
             <hr />
             <!-- Action Button -->
             <button id="animate-mouth-button" type="button">
-                Animate Mouth (First Letter)
+                Animate Mouths
             </button>
+            <button id="blink-button" type="button">Blink</button>
         </div>
 
         <div id="letter-display-area">
