--- a/dev/index.html
+++ b/dev/index.html
@@ -214,6 +214,6 @@
             <!-- Letters will be rendered here -->
         </div>
 
-        <script type="module" src="/dev/main.ts"></script>
+        <script type="module" src="/main.ts"></script>
     </body>
 </html>
