[dev] don't show attachment points by default

--- a/dev/index.html
+++ b/dev/index.html
@@ -433,11 +433,7 @@
                 </div>
                 <div class="panel-content collapsed" id="debug-controls">
                     <label class="checkbox-label">
-                        <input
-                            type="checkbox"
-                            id="show-attachments-checkbox"
-                            checked
-                        />
+                        <input type="checkbox" id="show-attachments-checkbox" />
                         <span>Show Attachment Points</span>
                     </label>
                 </div>
