add debug option to show baseline

--- a/dev/index.html
+++ b/dev/index.html
@@ -436,6 +436,10 @@
                         <input type="checkbox" id="show-attachments-checkbox" />
                         <span>Show Attachment Points</span>
                     </label>
+                    <label class="checkbox-label">
+                        <input type="checkbox" id="show-baseline-checkbox" />
+                        <span>Show Descender Baseline</span>
+                    </label>
                 </div>
             </div>
 
